--- a/mysite/templates/dashboard/login.html
+++ b/mysite/templates/dashboard/login.html
@@ -8,11 +8,11 @@
       <!-- Google Font: Source Sans Pro -->
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
       <!-- Font Awesome -->
-      <link rel="stylesheet" href="{% static 'plugins/fontawesome-free/css/all.min.css' %}">
+      <link rel="stylesheet" href="{% static 'dashboard/plugins/fontawesome-free/css/all.min.css' %}">
       <!-- icheck bootstrap -->
-      <link rel="stylesheet" href="{% static 'plugins/icheck-bootstrap/icheck-bootstrap.min.css' %}">
+      <link rel="stylesheet" href="{% static 'dashboard/plugins/icheck-bootstrap/icheck-bootstrap.min.css' %}">
       <!-- Theme style -->
-      <link rel="stylesheet" href="{% static 'css/adminlte.min.css' %}">
+      <link rel="stylesheet" href="{% static 'dashboard/css/adminlte.min.css' %}">
     </head>
     <body class="hold-transition login-page">
         <div class="login-box">
@@ -50,10 +50,10 @@
             </div>
           </div>
         </div>
-    <script src="{% static 'plugins/jquery/jquery.min.js' %}"></script>
+    <script src="{% static 'dashboard/plugins/jquery/jquery.min.js' %}"></script>
     <!-- Bootstrap 4 -->
-    <script src="{% static 'plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'dashboard/plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
     <!-- AdminLTE App -->
-    <script src="{% static 'js/adminlte.min.js' %}"></script>
+    <script src="{% static 'dashboard/js/adminlte.min.js' %}"></script>
     </body>
 </html>
