--- a/mysite/templates/fronted/base.html
+++ b/mysite/templates/fronted/base.html
@@ -13,13 +13,13 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- bootstrap css -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'fronted/css/bootstrap.min.css' %}">
     <!-- owl css -->
-    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
+    <link rel="stylesheet" href="{% static 'fronted/css/owl.carousel.min.css' %}">
     <!-- style css -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'fronted/css/style.css' %}">
     <!-- responsive-->
-    <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
+    <link rel="stylesheet" href="{% static 'fronted/css/responsive.css' %}">
     <!-- awesome fontfamily -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -31,13 +31,13 @@
     {% include 'fronted/navbar.html' %}
 	{% block content %}{% endblock %}
 	{% include 'fronted/footer.html' %}
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/popper.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-    <script src="{% static 'js/owl.carousel.min.js' %}"></script>
-    <script src="{% static 'js/custom.js' %}"></script>
-    <script src="{% static 'js/jquery.mCustomScrollbar.concat.min.js' %}"></script>
-    <script src="{% static 'js/jquery-3.0.0.min.js' %}"></script>
+    <script src="{% static 'fronted/js/jquery.min.js' %}"></script>
+    <script src="{% static 'fronted/js/popper.min.js' %}"></script>
+    <script src="{% static 'fronted/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'fronted/js/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'fronted/js/custom.js' %}"></script>
+    <script src="{% static 'fronted/js/jquery.mCustomScrollbar.concat.min.js' %}"></script>
+    <script src="{% static 'fronted/js/jquery-3.0.0.min.js' %}"></script>
     <script type="text/javascript">
         $(document).ready(function() {
             $("#sidebar").mCustomScrollbar({
