--- a/mysite/templates/fronted/register.html
+++ b/mysite/templates/fronted/register.html
@@ -13,7 +13,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- Custom Theme files -->
-<link href="{% static 'register_css/style.css' %}" rel="stylesheet" type="text/css" media="all" />
+<link href="{% static 'fronted/register_css/style.css' %}" rel="stylesheet" type="text/css" media="all" />
 <!-- //Custom Theme files -->
 <!-- web font -->
 <link href="//fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i" rel="stylesheet">
@@ -41,7 +41,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<input type="submit" value="SIGNUP">
 				</form>
-				<p>Don't have an Account? <a href="{% url 'login' %}"> Login Now!</a></p>
+				<p>Don't have an Account? <a href="{% url 'login_pas' %}"> Login Now!</a></p>
 			</div>
 		</div>
 		<!-- copyright -->
