--- a/mysite/templates/fronted/login.html
+++ b/mysite/templates/fronted/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="{% static 'login_css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'fronted/login_css/style.css' %}">
 </head>
 <body>
 <div class="container">
