--- a/mysite/templates/fronted/navbar.html
+++ b/mysite/templates/fronted/navbar.html
@@ -4,21 +4,21 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="full">
-                        <a class="logo" href="spicyo/index.html"><img src="{% static 'images/logo.png' %}" alt="#" /></a>
+                        <a class="logo" href="{% url 'home' %}"><img src="{% static 'fronted/images/logo.png' %}" alt="#" /></a>
                     </div>
                 </div>
                 <div class="col-md-9">
                     <div class="full">
                         <div class="right_header_info">
                             <ul>
-                                <li class="dinone">Contact Us : <img style="margin-right: 15px;margin-left: 15;" src="{% static 'images/phone_icon.png' %}" alt="#"><a href="#">90 606 61 00</a></li>
-                                <li class="dinone"><img style="margin-right: 15px;" src="{% static 'images/mail_icon.png' %}" alt="#"><a href="#">demo@gmail.com</a></li>
-                                <li class="dinone"><img style="margin-right: 15px;height: 21px;position: relative;top: -2px;" src="{% static 'images/location_icon.png' %}" alt="#"><a href="">Toshkent sh, Oloy bozor</a></li>
-                                <li class="button_user"><a class="button active" href="{% url 'login' %}">Login</a><a class="button" href="{% url 'register' %}">Register</a></li>
-                                <li><img style="margin-right: 15px;" src="{% static 'images/search_icon.png' %}" alt="#"></li>
+                                <li class="dinone">Contact Us : <img style="margin-right: 15px;margin-left: 15;" src="{% static 'fronted/images/phone_icon.png' %}" alt="#"><a href="#">90 606 61 00</a></li>
+                                <li class="dinone"><img style="margin-right: 15px;" src="{% static 'fronted/images/mail_icon.png' %}" alt="#"><a href="">demo@gmail.com</a></li>
+                                <li class="dinone"><img style="margin-right: 15px;height: 21px;position: relative;top: -2px;" src="{% static 'fronted/images/location_icon.png' %}" alt="#"><a href="https://www.google.ru/maps/@41.3183721,69.298717,14z">Toshkent sh, Oloy bozor</a></li>
+                                <li class="button_user"><a class="button active" href="{% url 'login_pas' %}">Login</a><a class="button" href="{% url 'register' %}">Register</a></li>
+                                <li><img style="margin-right: 15px;" src="{% static 'fronted/images/search_icon.png' %}" alt="#"></li>
                                 <li>
                                 <button type="button" id="sidebarCollapse">
-                                    <img src="{% static 'images/menu_icon.png' %}" alt="#">
+                                    <img src="{% static 'fronted/images/menu_icon.png' %}" alt="#">
                                 </button>
                             </li>
                         </ul>
