--- a/mysite/templates/fronted/spicyo/index.html
+++ b/mysite/templates/fronted/spicyo/index.html
@@ -19,19 +19,19 @@
 
             <ul class="list-unstyled components">
 
-                <li class="{% if 'index_list' in request.resolver_match.url_name %} active {% endif %}">
+                <li class="{% if 'index_list' in request.resolver_match.url_name %}active{% endif %}">
                     <a href="{% url 'index_list' %}">Home</a>
                 </li>
-                <li class="{% if 'about_list' in request.resolver_match.url_name %} active {% endif %}">
+                <li class="{% if 'about_list' in request.resolver_match.url_name %}active{% endif %}">
                     <a href="{% url 'about_list' %}">About</a>
                 </li>
-                <li class="{% if 'recipe_list' in request.resolver_match.url_name %} active {% endif %}">
+                <li class="{% if 'recipe_list' in request.resolver_match.url_name %}active{% endif %}">
                     <a href="{% url 'recipe_list' %}">Recipe</a>
                 </li>
-                <li class="{% if 'blog_list' in request.resolver_match.url_name %} active {% endif %}">
+                <li class="{% if 'blog_list' in request.resolver_match.url_name %}active{% endif %}">
                     <a href="{% url 'blog_list' %}">Blog</a>
                 </li>
-                <li class="{% if 'contact_list' in request.resolver_match.url_name %} active {% endif %}">
+                <li class="{% if 'contact_list' in request.resolver_match.url_name %}active{% endif %}">
                     <a href="{% url 'contact_list' %}">Contact Us</a>
                 </li>
             </ul>
@@ -208,12 +208,14 @@
 <div class="row">
 
   <div class="col-md-6 offset-md-3">
+      {% for clin in clients %}
      <div class="Client_box">
-       <img src="{% static 'fronted/images/client.jpg' %}" alt="#"/>
-       <h3>Roock Due</h3>
-       <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don’t look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn’t anything embarrassing hidden in the middle of text.</p>
+       <img src="/media/{{clin.image}}" alt="#"/>
+       <h3>{{clin.name}}</h3>
+       <p>{{clin.description}}</p>
        <i><img src="{% static 'fronted/images/client_icon.png' %}" alt="#"/></i>
      </div>
+      {% endfor %}
   </div>
 </div>
 </div>
